added final style features

--- a/index.html
+++ b/index.html
@@ -137,41 +137,39 @@
             </ul>
           </section>
         </div>
-        <!-- <div class="bottom-information"> -->
-          <section class="support-and-about">
-            <div class="support">
-              <h3>Support</h3>
-              <ul>
-                <li>
-                  Demo
-                </li>
-                <li>
-                  Support
-                </li>
-                <li>
-                  Contact
-                </li>
-                <li>
-                  Docs
-                </li>
-              </ul>
-            </div>
-            <div class="about">
-              <h3>About</h3>
-              <ul>
-                <li>
-                  Our Mission
-                </li>
-                <li>
-                  Careers
-                </li>
-                <li>
-                  Get in Touch
-                </li>
-              </ul>
-            </div>
-          </section>
-        <!-- </div> -->
+        <section class="support-and-about">
+          <div class="support">
+            <h3>Support</h3>
+            <ul>
+              <li>
+                Demo
+              </li>
+              <li>
+                Support
+              </li>
+              <li>
+                Contact
+              </li>
+              <li>
+                Docs
+              </li>
+            </ul>
+          </div>
+          <div class="about">
+            <h3 ID="hi">About</h3>
+            <ul>
+              <li>
+                Our Mission
+              </li>
+              <li>
+                Careers
+              </li>
+              <li>
+                Get in Touch
+              </li>
+            </ul>
+          </div>
+        </section>
       </div>
     </div>
   </body>
