team images centered and margin added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Startrly</title>
     <LINK REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>
     <LINK REL=StyleSheet HREF="styles.css" TYPE="text/css" MEDIA=screen>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
+    </style>
   </head>
   <body>
     <div>
-
-
       <nav>
         <ul>
           <li id="startrly">
