--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <section id="team">
         <h2 class="section-header">Meet the team</h2>
-        <ul>
+        <ul class="flex-row-vertically-centered">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
