Added class names to html

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </nav>
 
 
-      <section>
+      <section class="welcome">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote-inspo">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -41,36 +41,41 @@
         </p>
       </section>
 
-
-      <section>
+      <section class="mission">
         <h2>Why?</h2>
         <ul>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            <div class="mission-phrases">
+              <strong>Comfortable</strong>
+              <p>
+                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              </p>
+            </div>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
+            <div class="mission-phrases">
+              <strong>Robust</strong>
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              </p>
+            </div>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+            <div class="mission-phrases">
+              <strong>Convenient</strong>
+              <p>
+                Itaque earum rerum hic tenetur a sapiente delectus.
+              </p>
+            </div>
           </li>
         </ul>
       </section>
 
 
-      <section>
+      <section class="quote-inspo">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -79,40 +84,39 @@
         </p>
       </section>
 
-
-      <section>
+      <section class="meet-the-team">
         <h2>Meet the team</h2>
         <ul>
-          <li>
+          <li class="team-profile">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
+            <span class="team-member-name">Kari Kiwi</span>
+            <span class="team-member-role">CFO</span>
           </li>
-          <li>
+          <li class="team-profile">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
+            <span class="team-member-name">Dan Dragon</span>
+            <span class="team-member-role">CMO</span>
           </li>
-          <li>
+          <li class="team-profile">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
+            <span class="team-member-name">Chris Caribou</span>
+            <span class="team-member-role">CIO</span>
           </li>
-          <li>
+          <li class="team-profile">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
+            <span class="team-member-name">Charles Cheetah</span>
+            <span class="team-member-role">Board Member, CTO</span>
           </li>
-          <li>
+          <li class="team-profile">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+            <span class="team-member-name">Dee Dugong</span>
+            <span class="team-member-role">Startup Enthusiast</span>
           </li>
         </ul>
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -134,7 +138,7 @@
       </section>
 
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
