--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Startrly</title>
     <link href="normalize.css" rel="stylesheet" />
   <link href="styles.css" rel="stylesheet" />
- <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div class ="wrapper">
 
 
       <nav class="nav">
@@ -26,15 +26,14 @@
       </nav>
 
 
-      <section class = "section">
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#" class="header-button">Some Call to Action</a>
+      <section class = "header-box">
+        <div class="header-startly"><h1>Startrly</h1></div>
+        <div class="header-tagline"><sub>A catchy tagline for a great solution</sub></div>
+        <div><a href="#" class="header-button">Some Call to Action</a></div>
       </section>
 
 
       <section class= "content-quote">
-        <div class="container"></div>
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -46,7 +45,7 @@
 
       <section class = "content-why">
         <h2>Why?</h2>
-        <ul>
+        <ul class="why-pictures-box">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
@@ -72,7 +71,7 @@
       </section>
 
 
-      <section>
+      <section class= "content-quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
