--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link REL=StyleSheet HREF="normalize.css" TYPE="text/css">
+    <link REL=StyleSheet HREF="style.css" TYPE="text/css">
     <title>Startrly</title>
   </head>
   <body>
@@ -23,24 +25,37 @@
       </nav>
 
 
-      <section>
+      <section class="sub">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <br>
+        <br>
+        <p></p>
+        <a href="#"></a>
+        <input name="name" type="text" placeholder="    Some Call To Action">
+      </div>
       </section>
+      <br>
+      <br>
+      <br>
+      <hr>
 
 
       <section>
         <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+          <br>
+          <br>
+          <br>
         </blockquote>
         <p>
-          Mx. Lorem
+        Mx. Lorem
         </p>
       </section>
-
-
+      <hr>
       <section>
+        <br>
+        <br>
         <h2>Why?</h2>
         <ul>
           <li>
@@ -67,18 +82,18 @@
         </ul>
       </section>
 
-
+      <hr>
       <section>
         <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
         </blockquote>
         <p>
-          Mx. Ipsum
+          -- Mx. Ipsum
         </p>
       </section>
 
-
-      <section>
+      <hr>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,7 +125,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -131,8 +146,9 @@
         </ul>
       </section>
 
+      <hr>
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
