--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <section>
         <h2 class="title">Why?</h2>
-        <ul class="why">
+        <ul id="why">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
