--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline" rel="stylesheet">
   </head>
   <body>
     <div>
@@ -27,7 +28,7 @@
       </nav>
 
 
-      <section class= "header">
+      <section class= "header parallax">
         <h1 class= "title">Startrly</h1>
         <sub class= "tagline">A catchy tagline for a great solution</sub>
         <a class= "taglink" href="#">Some Call to Action</a>
@@ -48,21 +49,21 @@
         <h2 class= "section_header">Why?</h2>
         <ul class= "why_boxes">
           <li class= "why_box">
-            <img class= "why_img" src="http://via.placeholder.com/100x100" />
+            <img class= "why_img" src="../images/pretty.jpeg">
             <strong class= "why_title">Comfortable</strong>
             <p class= "why_desc">
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
           <li class= "why_box">
-            <img class= "why_img" src="http://via.placeholder.com/100x100" />
+            <img class= "why_img" src="../images/pretty2.jpeg" />
             <strong class= "why_title">Robust</strong>
             <p class= "why_desc">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
           <li class= "why_box"> 
-            <img class= "why_img" src="http://via.placeholder.com/100x100" />
+            <img class= "why_img" src="../images/prett3.jpeg">
             <strong class= "why_title">Convenient</strong>
             <p class= "why_desc"> 
               Itaque earum rerum hic tenetur a sapiente delectus.
@@ -86,27 +87,27 @@
         <h2 class= "section_header">Meet the team</h2>
         <ul class= "team">
           <li class= "team_box">
-            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+            <img class= "team_img" src="../images/download (3).jpeg" alt="profile for kari kiwi" />
             <span class= "name" >Kari Kiwi</span>
             <span class= "name">CFO</span>
           </li>
           <li class= "team_box">
-            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for dan dragon" />
+            <img class= "team_img" src="../images/images (3).jpeg" alt="profile for dan dragon" />
             <span class= "name">Dan Dragon</span>
             <span class= "name">CMO</span>
           </li>
           <li class= "team_box">
-            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for chris caribou" />
+            <img class= "team_img" src="../images/para.jpeg" alt="profile for chris caribou" />
             <span class= "name">Chris Caribou</span>
             <span class= "name">CIO</span>
           </li>
           <li class= "team_box">
-            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+            <img class= "team_img" src="../images/images (1).jpeg" alt="profile for charles cheetah" />
             <span class= "name">Charles Cheetah</span>
             <span class= "name">Board Member, CTO</span>
           </li>
           <li class= "team_box">
-            <img  class= "team_img" src="https://placebear.com/150/150" alt="profile for dee dugong" />
+            <img  class= "team_img" src="../images/images (2).jpeg" alt="profile for dee dugong" />
             <span class= "name">Dee Dugong</span>
             <span class= "name">Startup Enthusiast</span>
           </li>
@@ -117,19 +118,19 @@
         <h2 class= "section_header">Sponsors</h2>
         <ul class= "sponsor_box">
           <li class= "sponsor">
-            <img src="http://via.placeholder.com/300x100" />
+            <img src="https://picsum.photos/300/100/?random" />
           </li>
           <li class= "sponsor">
-            <img src="http://via.placeholder.com/250x125" />
+            <img src="https://picsum.photos/250/125/?random" />
           </li>
           <li class= "sponsor">
-            <img src="http://via.placeholder.com/275x70" />
+            <img src="https://picsum.photos/275/70/?random" />
           </li>
           <li class= "sponsor">
-            <img src="http://via.placeholder.com/250x120" />
+            <img src="https://picsum.photos/250/120/?random" />
           </li>
           <li class= "sponsor">
-            <img src="http://via.placeholder.com/220x100" />
+            <img src="https://picsum.photos/220/100/?random" />
           </li>
         </ul>
       </section>
