added mouse and cheese -)

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -18,10 +18,10 @@
           <li class= "nav_elem">
             Startrly
           </li>
-          <li class= "nav_elem_2">
+          <li class= "nav_elem">
             Try Now!
           </li>
-          <li class= nav_elem_3>
+          <li class= "nav_elem">
             About
           </li>
         </ul>
