--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="site-container">
 
 
-      <nav id="heading">
+      <nav>
         <ul>
           <li id="startrly">
             Startrly
