--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <LINK REL=StyleSheet HREF="styles/normalize.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="styles/styles.css" TYPE="text/css" MEDIA=screen>
   </head>
   <body>
-    <div>
+    <div class="container">
 
 
       <nav>
@@ -23,14 +25,14 @@
       </nav>
 
 
-      <section>
+      <section class="first">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="second">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section class="third">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class="second">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,7 +80,7 @@
       </section>
 
 
-      <section>
+      <section class="fifth">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,7 +112,7 @@
       </section>
 
 
-      <section>
+      <section class="sixth">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -132,7 +134,7 @@
       </section>
 
 
-      <section>
+      <section class="seventh">
         <div>
           <h3>Support</h3>
           <ul>
