--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </nav>
 
 
-      <section class="first">
+      <section class="top">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section class="second">
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -42,7 +42,7 @@
       </section>
 
 
-      <section class="third">
+      <section class="mission">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -70,7 +70,7 @@
       </section>
 
 
-      <section class="second">
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -80,7 +80,7 @@
       </section>
 
 
-      <section class="fifth">
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -112,7 +112,7 @@
       </section>
 
 
-      <section class="sixth">
+      <section class="sponsor">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -134,7 +134,7 @@
       </section>
 
 
-      <section class="seventh">
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
