--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
   <body>
     <div>
 
-
-      <nav>
-        <ul>
-          <li>
-            Startrly
-          </li>
-          <li>
-            Try Now!
-          </li>
-          <li>
-            About
-          </li>
-        </ul>
-      </nav>
-
-
       <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <nav>
+          <ul>
+            <li>
+              Startrly
+            </li>
+            <li>
+              Try Now!
+            </li>
+            <li>
+              About
+            </li>
+          </ul>
+        </nav>
+
+
+        <section>
+          <h1>Startrly</h1>
+          <sub>A catchy tagline for a great solution</sub>
+          <a href="#">Some Call to Action</a>
+        </section>
       </section>
 
-
-      <section>
+      <section class="blockquote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -42,29 +42,35 @@
       </section>
 
 
-      <section>
+      <section id="why">
         <h2>Why?</h2>
-        <ul>
+        <ul id="answerstowhy">
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            <section class = "reason">
+              <strong>Comfortable</strong>
+              <p>
+                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              </p>
+            </section>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
+            <section class = "reason">
+              <strong>Robust</strong>
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              </p>
+            </section>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+            <section class="reason">
+              <strong>Convenient</strong>
+              <p>
+                Itaque earum rerum hic tenetur a sapiente delectus.
+              </p>
+            </section>
           </li>
         </ul>
       </section>
