changes to ids and sections in html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </section>
 
 
-      <section>
+      <section class="blockquote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -86,7 +86,7 @@
       </section>
 
 
-      <section>
+      <section id="meettheteam">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -118,7 +118,7 @@
       </section>
 
 
-      <section>
+      <section id="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -140,7 +140,7 @@
       </section>
 
 
-      <section>
+      <section id="companyinfo">
         <div>
           <h3>Support</h3>
           <ul>
