added line between sections

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
         </section>
       </div>
 
-      <div class="sponsors">
-        <section>
+      <!-- <div > -->
+        <section class="sponsors">
           <h2>Sponsors</h2>
           <ul class="flex-boxes">
             <li>
@@ -177,7 +177,7 @@
             </li>
           </ul>
         </section>
-      </div>
+      <!-- </div> -->
 
       <section class="footer">
         <div>
