--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
 
 
         <section>
-          <h1>Startrly</h1>
-          <sub>A catchy tagline for a great solution</sub>
-          <a href="#">Some Call to Action</a>
+            <section id="page_one" >
+              <h1>Startrly</h1>
+              <sub>A catchy tagline for a great solution</sub>
+              <a href="#">Some Call to Action</a>
+            </section>
         </section>
       </section>
 
-      <section class="blockquote">
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -76,7 +78,7 @@
       </section>
 
 
-      <section class="blockquote">
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
