--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8">
     <link href="normalize.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <title>Startrly</title>
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">    <title>Startrly</title>
   </head>
   <body>
-    <div class="container">
+    <div>
 
-      
       <nav>
-        <ul class="nav-container">
+        <ul class="nav">
           <li>
             Startrly
           </li>
@@ -25,7 +24,7 @@
       </nav>
       
 
-      <section class="tagline-container">
+      <section class="tagline">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#" class= "button">Some Call to Action</a>
@@ -42,29 +41,35 @@
       </section>
 
 
-      <section>
+      <section class="why-section">
         <h2>Why?</h2>
         <ul class="reason-container">
-          <li>
+          <li class="reasons">
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            <div>
+              <strong>Comfortable</strong>
+              <p>
+                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              </p>
+             </div>
           </li>
-          <li>
+          <li class="reasons">
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
+            <div>
+              <strong>Robust</strong>
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              </p>
+            </div>
           </li>
-          <li>
+          <li class="reasons">
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+            <div>
+              <strong>Convenient</strong>
+              <p>
+                Itaque earum rerum hic tenetur a sapiente delectus.
+              </p>
+            </div>
           </li>
         </ul>
       </section>
@@ -82,7 +87,7 @@
 
       <section>
         <h2>Meet the team</h2>
-        <ul class = "team-container">
+        <ul class = "team">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
@@ -114,7 +119,7 @@
 
       <section>
         <h2>Sponsors</h2>
-        <ul class = "sponsors-container">
+        <ul class = "sponsors">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -134,7 +139,7 @@
       </section>
 
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
