trying to change the ul inside sponsore section into a gridbox

--- a/index.html
+++ b/index.html
@@ -92,34 +92,34 @@
         <ul class="grid-container">
           <li class="cfo">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <div>
+            <div class="content">
             <div><span>Kari Kiwi</span></div>
             <div><span>CFO</span></div>
           </li>
           <li class="cmo">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <div>
+            <div class="content">
             <div><span>Dan Dragon</span></div>
             <div><span>CMO</span></div>
             </div>
           </li>
           <li class="cio">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <div>
+            <div class="content">
             <div><span>Chris Caribou</span></div>
             <div><span>CIO</span></div>
             </div>
           </li>
           <li class="cto">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <div>
+            <div class="content">
             <div><span>Charles Cheetah</span></div>
             <div><span>Board Member, CTO</span></div>
             </div>
           </li>
           <li class="enthusiast">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <div>
+            <div class="content">
             <div><span>Dee Dugong</span></div>
             <div><span>Startup Enthusiast</span></div>
             </div>
@@ -131,7 +131,6 @@
       <section class="content">
         <h2>Sponsors</h2>
         <ul class="sponsors">
-          <div>
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -144,18 +143,15 @@
           <li>
             <img src="http://via.placeholder.com/250x120" />
           </li>
-          </div>
-          <div>
           <li>
             <img src="http://via.placeholder.com/220x100" />
           </li>
-          </div>
         </ul>
       </section>
 
 
       <section class="footer-box">
-        <div>
+        <div class="content">
           <h3>Support</h3>
           <ul>
             <li>
@@ -172,7 +168,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="content">
           <h3>About</h3>
           <ul>
             <li>
