Made some changes to add quotation marks to quotes.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
         <div class="blockquotes">
-            <section>
+            <section class="border">
                 <blockquote class="quote">
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                 </blockquote>
