clean up grids and flexes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Startrly</title>
     <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Homemade+Apple|Muli|Noto+Serif+JP|Roboto" rel="stylesheet">
   </head>
   <body class="pagecontainer">
     <div class="container">
@@ -112,7 +113,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -134,7 +135,7 @@
       </section>
 
 
-      <section>
+      <section class="menu"> 
         <div>
           <h3>Support</h3>
           <ul>
