Project. Forgot to commit regularly

--- a/index.html
+++ b/index.html
@@ -1,66 +1,74 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
   </head>
+
+  
   <body>
-    <div>
+    <div id="content">
 
 
       <nav>
-        <ul>
-          <li>
+        <ul class="navigation">
+          <li class="home">
             Startrly
           </li>
-          <li>
+          <li class="try-now">
             Try Now!
           </li>
-          <li>
+          <li class="about">
             About
           </li>
         </ul>
       </nav>
 
 
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
+      <section class="header">
+        <h1 class="title">Startrly</h1>
+        <sub class="tagline">A Catchy Tagline For a Great Solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
-        <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      <section class="section1">
+        <blockquote class="quote">
+          " Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. "
         </blockquote>
         <p>
-          Mx. Lorem
+          -- Mx. Lorem
         </p>
       </section>
 
 
-      <section>
+      <section id="why">
         <h2>Why?</h2>
-        <ul>
+        <ul id="reasons-why">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+            <p class="small-text">
+              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus
+              maiores.
             </p>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+            <p class="small-text">
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui
+              in ea voluptate velit esse quam.
             </p>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Convenient</strong>
-            <p>
+            <p class="small-text">
               Itaque earum rerum hic tenetur a sapiente delectus.
             </p>
           </li>
@@ -69,16 +77,17 @@
 
 
       <section>
-        <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        <blockquote class="quote">
+          " Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+          dolores eos qui ratione voluptatem sequi nesciunt. "
         </blockquote>
         <p>
-          Mx. Ipsum
+          -- Mx. Ipsum
         </p>
       </section>
 
 
-      <section>
+      <section id="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,9 +119,9 @@
       </section>
 
 
-      <section>
+      <section id="sponsors">
         <h2>Sponsors</h2>
-        <ul>
+        <ul id="sponsor-list">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -132,10 +141,10 @@
       </section>
 
 
-      <section>
+      <section class ="footer">
         <div>
           <h3>Support</h3>
-          <ul>
+          <ul class="footer-support">
             <li>
               Demo
             </li>
@@ -150,9 +159,9 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-column2">
           <h3>About</h3>
-          <ul>
+          <ul class="footer-about">
             <li>
               Our Mission
             </li>
@@ -168,4 +177,5 @@
 
     </div>
   </body>
+
 </html>
