--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Startrly</title>
-  </head>
-  <body>
-    <div>
 
+<head>
+  <meta charset="utf-8">
+  <title>Startrly</title>
+  <LINK REL=StyleSheet HREF="styles/normalize.css" TYPE="text/css" MEDIA=screen>
+  <LINK REL=StyleSheet HREF="styles/styles.css" TYPE="text/css" MEDIA=screen>
+</head>
 
+<body>
+  <div>
+    
       <nav>
-        <ul>
-          <li>
+        <ul class ="navbar">
+          <li id="startly">
             Startrly
           </li>
           <li>
@@ -23,16 +26,17 @@
       </nav>
 
 
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+      <section class="title">
+        <div><h1>Startrly</h1></div>
+        <div><sub>A catchy tagline for a great solution</sub></div>
+        <div><a href="#">Some Call to Action</a></div>
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.
         </blockquote>
         <p>
           Mx. Lorem
@@ -41,20 +45,22 @@
 
 
       <section>
-        <h2>Why?</h2>
-        <ul>
+        <div class="head"><h2>Why?</h2></div>
+        <ul class="why">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
             <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus
+              maiores.
             </p>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui
+              in ea voluptate velit esse quam.
             </p>
           </li>
           <li>
@@ -68,104 +74,107 @@
       </section>
 
 
-      <section>
+      <section class= "quote">
         <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+          dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
         <p>
           Mx. Ipsum
         </p>
       </section>
 
+ 
 
-      <section>
-        <h2>Meet the team</h2>
+    <section>
+      <div class="head"><h2>Meet the team</h2></div>
+      <ul class = "team">
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+          <div><span>Kari Kiwi</span></div>
+          <div><span>CFO</span></div>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+          <div><span>Dan Dragon</span></div>
+          <div><span>CMO</span></div>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+          <div><span>Chris Caribou</span></div>
+          <div><span>CIO</span></div>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+          <div><span>Charles Cheetah</span></div>
+          <div><span>Board Member, CTO</span></div>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+          <div><span>Dee Dugong</span></div>
+          <div><span>Startup Enthusiast</span></div>
+        </li>
+      </ul>
+    </section>
+
+
+    <section>
+        <div class="head"><h2>Sponsors</h2></div>
+      <ul class = "sponsors">
+        <li>
+          <img src="http://via.placeholder.com/300x100" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x125" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/275x70" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x120" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/220x100" />
+        </li>
+      </ul>
+    </section>
+
+
+    <section class = "foot">
+      <div> 
+        <h3>Support</h3>
         <ul>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
+            Demo
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
+            Support
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
+            Contact
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+            Docs
           </li>
         </ul>
-      </section>
-
-
-      <section>
-        <h2>Sponsors</h2>
+      </div>
+      <div>
+        <h3>About</h3>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/300x100" />
+            Our Mission
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x125" />
+            Careers
           </li>
           <li>
-            <img src="http://via.placeholder.com/275x70" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x120" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/220x100" />
+            Get in Touch
           </li>
         </ul>
-      </section>
+      </div>
+    </section>
 
+  </div>
+</body>
 
-      <section>
-        <div>
-          <h3>Support</h3>
-          <ul>
-            <li>
-              Demo
-            </li>
-            <li>
-              Support
-            </li>
-            <li>
-              Contact
-            </li>
-            <li>
-              Docs
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About</h3>
-          <ul>
-            <li>
-              Our Mission
-            </li>
-            <li>
-              Careers
-            </li>
-            <li>
-              Get in Touch
-            </li>
-          </ul>
-        </div>
-      </section>
-
-    </div>
-  </body>
 </html>
