--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
-  </head>
+    <LINK REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>  </head>
+    <LINK REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen>  </head>
   <body>
     <div>
 
@@ -23,14 +24,14 @@
       </nav>
 
 
-      <section>
+      <section id="heading">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +41,7 @@
       </section>
 
 
-      <section>
+      <section id="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +69,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,7 +79,7 @@
       </section>
 
 
-      <section>
+      <section id="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,7 +111,7 @@
       </section>
 
 
-      <section>
+      <section id="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -132,7 +133,7 @@
       </section>
 
 
-      <section>
+      <section id="footer">
         <div>
           <h3>Support</h3>
           <ul>
