--- a/index.html
+++ b/index.html
@@ -1,173 +1,188 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Startrly</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">  
-    <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
-  </head>
-  <body>
-    <div>
+
+<head>
+  <meta charset="utf-8">
+  <title>Startrly</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+</head>
+
+<body>
+  <div>
 
 
-      <nav>
-        <ul class="top-menu">
-          <li>
-            Startrly
-          </li>
-          <li>
-            Try Now!
-          </li>
-          <li>
-            About
-          </li>
-        </ul>
-      </nav>
+    <nav>
+      <ul class="top-menu">
+        <li>
+          Startrly
+        </li>
+        <li>
+          Try Now!
+        </li>
+        <li>
+          About
+        </li>
+      </ul>
+    </nav>
 
 
-      <section class="section-header">
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
-      </section>
+    <section class="section-header">
+      <h1>Startrly</h1>
+      <sub>A catchy tagline for a great solution</sub>
+      <a href="#">Some Call to Action</a>
+    </section>
 
 
-      <section class="section-quote">
-        <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </blockquote>
-        <p class="quote-signature">
-          Mx. Lorem
-        </p>
-      </section>
+    <section class="section-quote">
+      <blockquote>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua.
+      </blockquote>
+      <p class="quote-signature">
+        Mx. Lorem
+      </p>
+    </section>
 
 
-      <section class="section-why">
-        <h2>Why?</h2>
-        <ul>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
+    <section class="section-why">
+      <h2>Why?</h2>
+      <ul>
+        <li>
+          <img src="http://via.placeholder.com/100x100" />
+          <div>
             <strong>Comfortable</strong>
             <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus
+              maiores.
             </p>
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
+          </div>
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/100x100" />
+          <div>
             <strong>Robust</strong>
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui
+              in
+              ea voluptate velit esse quam.
             </p>
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
+          </div>
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/100x100" />
+          <div>
             <strong>Convenient</strong>
             <p>
               Itaque earum rerum hic tenetur a sapiente delectus.
             </p>
-          </li>
-        </ul>
-      </section>
+          </div>
+        </li>
+      </ul>
+    </section>
 
 
-      <section class="section-quote">
-        <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </blockquote>
-        <p class="quote-signature">
-          Mx. Ipsum
-        </p>
-      </section>
+    <section class="section-quote">
+      <blockquote>
+        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+        eos qui ratione voluptatem sequi nesciunt.
+      </blockquote>
+      <p class="quote-signature">
+        Mx. Ipsum
+      </p>
+    </section>
 
 
-      <section class="section-team">
-        <h2>Meet the team</h2>
+    <section class="section-team">
+      <h2>Meet the team</h2>
+      <ul>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+          <span>Kari Kiwi</span>
+          <span>CFO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+          <span>Dan Dragon</span>
+          <span>CMO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+          <span>Chris Caribou</span>
+          <span>CIO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+          <span>Charles Cheetah</span>
+          <span>Board Member, CTO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+          <span>Dee Dugong</span>
+          <span>Startup Enthusiast</span>
+        </li>
+      </ul>
+    </section>
+
+
+    <section class="section-sponsors">
+      <h2>Sponsors</h2>
+      <ul>
+        <li>
+          <img src="http://via.placeholder.com/300x100" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x125" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/275x70" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x120" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/220x100" />
+        </li>
+      </ul>
+    </section>
+
+
+    <section class="section-support">
+      <div>
+        <h3>Support</h3>
         <ul>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
+            Demo
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
+            Support
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
+            Contact
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+            Docs
           </li>
         </ul>
-      </section>
-
-
-      <section>
-        <h2>Sponsors</h2>
+      </div>
+      <div>
+        <h3>About</h3>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/300x100" />
+            Our Mission
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x125" />
+            Careers
           </li>
           <li>
-            <img src="http://via.placeholder.com/275x70" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x120" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/220x100" />
+            Get in Touch
           </li>
         </ul>
-      </section>
+      </div>
+    </section>
 
+  </div>
+</body>
 
-      <section>
-        <div>
-          <h3>Support</h3>
-          <ul>
-            <li>
-              Demo
-            </li>
-            <li>
-              Support
-            </li>
-            <li>
-              Contact
-            </li>
-            <li>
-              Docs
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About</h3>
-          <ul>
-            <li>
-              Our Mission
-            </li>
-            <li>
-              Careers
-            </li>
-            <li>
-              Get in Touch
-            </li>
-          </ul>
-        </div>
-      </section>
-
-    </div>
-  </body>
 </html>
