added alt text to all images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>Why?</h2>
         <ul>
           <li>
-            <img src="images/icons/towel.png" />
+            <img src="images/icons/towel.png" alt="towl illustration" />
             <div>
               <strong>Comfortable</strong>
               <p>
@@ -59,7 +59,7 @@
             </div>
           </li>
           <li>
-            <img src="images/icons/perfume.png" />
+            <img src="images/icons/perfume.png" alt="perfume illustration" />
             <div>
             <strong>Robust</strong>
             <p>
@@ -68,7 +68,7 @@
             </div>
           </li>
           <li>
-            <img src="images/icons/cute.png" />
+            <img src="images/icons/cute.png" alt="toilet paper illustration"/>
             <div>
             <strong>Convenient</strong>
             <p>
@@ -126,19 +126,19 @@
         <h2>Sponsors</h2>
         <ul>
           <li>
-            <img src="images/logos/images.png" />
+            <img src="images/logos/images.png" alt="sponsor logo - chanel" />
           </li>
           <li>
-            <img src="images/logos/OrleansWinderLogo.jpg" />
+            <img src="images/logos/OrleansWinderLogo.jpg" alt="sponsor logo - orleans winder"/>
           </li>
           <li>
-            <img src="images/logos/logo-design-fuzzique.jpg" />
+            <img src="images/logos/logo-design-fuzzique.jpg" alt="sponsor logo - fuzzique" />
           </li>
           <li>
-            <img src="images/logos/sfco.png" />
+            <img src="images/logos/sfco.png" alt="sponsor logo - sfco" />
           </li>
           <li>
-            <img src="images/logos/wildelogo.png" />
+            <img src="images/logos/wildelogo.png" alt="sponsor logo - wilde" />
           </li>
         </ul>
       </section>
