lays out page with stylesheet

--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <div>
-
-
-      <nav>
-        <ul>
-          <li>
-            Startrly
+    <nav class="navbar">
+      <ul class="nav">
+        <li class="navbar-name"><a href="#">
+          Startrly</a>
           </li>
-          <li>
-            Try Now!
+           <li class="action"><a href="#">
+            Try Now!</a>
           </li>
-          <li>
-            About
-          </li>
-        </ul>
-      </nav>
+          <li><a href="#">
+            About</a>
+        </li>
+      </ul>
+    </nav>
 
-
-      <section>
-        <h1>Startrly</h1>
+      <section class="welcome">
+        <header><h1>Startrly</h1></header>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,24 +38,24 @@
       </section>
 
 
-      <section>
+      <section class="why">
         <h2>Why?</h2>
-        <ul>
-          <li>
+        <ul class="answers">
+          <li class="answerbox">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
             <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
-          <li>
+          <li class="answerbox">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
-          <li>
+          <li class="answerbox">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Convenient</strong>
             <p>
@@ -68,7 +66,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -80,7 +78,7 @@
 
       <section>
         <h2>Meet the team</h2>
-        <ul>
+        <ul class="team">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
@@ -110,9 +108,9 @@
       </section>
 
 
-      <section>
+      <section class="sponsorlist">
         <h2>Sponsors</h2>
-        <ul>
+        <ul class="sponsors">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -132,7 +130,7 @@
       </section>
 
 
-      <section>
+      <section id="footer">
         <div>
           <h3>Support</h3>
           <ul>
@@ -165,7 +163,6 @@
           </ul>
         </div>
       </section>
-
-    </div>
   </body>
 </html>
+
