added classes to divs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li>
             <img src="images/icons/towel.png" alt="towl illustration" />
-            <div>
+            <div class="wrapper">
               <strong>Comfortable</strong>
               <p>
                 Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
