--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles/styles.css" /> 
   </head>
   <body>
-    <main class="container">
+    <main>
     <div>
 
 
