For peer review.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!-- For that pesky (ill-used) sub tag in the Startrly project’s html. Kaida shared these CSS properties and values that should make it act better!! position: static; line-height: normal; -->
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <!--  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>RubyReviews</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">  
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
   </head>
   <body>
-    <div>
+    <div class="maingrid">
 
 
       <nav>
@@ -133,7 +140,7 @@
 
 
       <section>
-        <div>
+        <div class="footer">
           <h3>Support</h3>
           <ul>
             <li>
