--- a/index.html
+++ b/index.html
@@ -86,32 +86,37 @@
 
       <section class="team">
         <h2>Meet the team</h2>
+        
         <ul>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
-          </li>
+            <div class="first-3">
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+              <span>Kari Kiwi</span>
+              <span>CFO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+              <span>Dan Dragon</span>
+              <span>CMO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+              <span>Chris Caribou</span>
+              <span>CIO</span>
+            </li>
+        </div>
+          <div class="last-2">
+              <li>
+                <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+                <span>Charles Cheetah</span>
+                <span>Board Member, CTO</span>
+              </li>
+              <li>
+                <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+                <span>Dee Dugong</span>
+                <span>Startup Enthusiast</span>
+              </li>
+          </div>
         </ul>
       </section>
 
