--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <LINK REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="styles/styles.css" TYPE="text/css" MEDIA=screen>
   </head>
   <body>
-    <div>
+    <div class="container">
 
 
       <nav>
         <ul>
-          <li>
+          <li id="startrly">
             Startrly
           </li>
-          <li>
+          <li id="try_now">
             Try Now!
           </li>
-          <li>
+          <li id="about">
             About
           </li>
         </ul>
       </nav>
 
 
-      <section>
+      <section id="slogan">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section id="quote1">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section id="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section id="quote2">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,7 +80,7 @@
       </section>
 
 
-      <section>
+      <section id="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,7 +112,7 @@
       </section>
 
 
-      <section>
+      <section id="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -131,7 +133,7 @@
         </ul>
       </section>
 
-
+    <footer>
       <section>
         <div>
           <h3>Support</h3>
@@ -165,6 +167,7 @@
           </ul>
         </div>
       </section>
+    </footer>
 
     </div>
   </body>
