--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Startrly</title>
     <link REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>
     <link REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
   </head>
   <body>
       <nav>
