--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Startrly</title>
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
@@ -167,7 +167,6 @@
           </ul>
         </div>
       </section>
-
     </div>
   </body>
 </html>
