fixed spacing and tried to DRY code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         </p>
       </section>
 
-
       <section class="why">
         <div>
           <h2 id="top">Why?</h2>
@@ -87,8 +86,8 @@
       <section class="team">
         <h2>Meet the team</h2>
         
-        <ul>
-            <div class="first-3">
+        <ul class="first-3">
+  
             <li>
               <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
               <span>Kari Kiwi</span>
@@ -104,8 +103,7 @@
               <span>Chris Caribou</span>
               <span>CIO</span>
             </li>
-        </div>
-          <div class="last-2">
+          
               <li>
                 <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
                 <span>Charles Cheetah</span>
@@ -116,7 +114,6 @@
                 <span>Dee Dugong</span>
                 <span>Startup Enthusiast</span>
               </li>
-          </div>
         </ul>
       </section>
 
