added minor changes to the why section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel=stylesheet href="styles/normalize.css" type="text/css" media=screen>
     <link rel=StyleSheet href="styles/style.css" type="text/css" media=screen>
   </head>
-  <body>
-    <div class="container">
-
+  <body class="container">
 
       <nav class="nav-bar">
         <ul class="nav-bar-list">
@@ -46,39 +44,25 @@
         <h2>Why?</h2>
         <ul class="reasons">
           <li>
-            <div>
-              <img src="http://via.placeholder.com/100x100" />
-            </div>
-            
-            <div>
-              <strong>Comfortable</strong>
-              <p>
-                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-              </p>
-            </div>
+            <img src="http://via.placeholder.com/100x100" />
+            <strong>Comfortable</strong>
+            <p>
+              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+            </p>
           </li>
           <li>
-            <div>
-              <img src="http://via.placeholder.com/100x100" />
-            </div>
-            
-            <div>
-              <strong>Robust</strong>
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-              </p>
-            </div>
+            <img src="http://via.placeholder.com/100x100" />
+            <strong>Robust</strong>
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+            </p>
           </li>
           <li>
-            <div>
-              <img src="http://via.placeholder.com/100x100" />
-            </div>
-            <div>
-              <strong>Convenient</strong>
-              <p>
-                Itaque earum rerum hic tenetur a sapiente delectus.
-              </p>
-            </div>
+            <img src="http://via.placeholder.com/100x100" />
+            <strong>Convenient</strong>
+            <p>
+              Itaque earum rerum hic tenetur a sapiente delectus.
+            </p>  
           </li>
         </ul>
       </section>
@@ -188,6 +172,5 @@
         </div>
       </section>
 
-    </div>
   </body>
 </html>
